--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,6 +17,8 @@
     <h3 class="text-muted">Angular Blog App</h3>
 </header>
 
+<list-demo></list-demo>
+
 <main role="main">
 
     <div class="jumbotron">
