--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -37,3 +37,10 @@ samp {
     background-color: #FFFFFF;
     margin: 0;
 }
+.bd-sidenav li {
+    display: block;
+}
+.bd-sidenav li a {
+    display: block;
+    padding: 5px 10px;
+}
