Added code view section and created Tabs Module example for Tabs component

--- a/src/app3-angular-examples/components/angular-tips.component.html
+++ b/src/app3-angular-examples/components/angular-tips.component.html
@@ -2,32 +2,134 @@
     <a class="uk-link-reset" href="">Heading</a>
 </h1>
 
+<!-- START : Angular 4+ Tip-->
 <article class="uk-article">
 
-    <h2 class="uk-text-lead">
-        Using
+    <h2 class="uk-text-lead">Using
         <code>trackBy</code>
-
     </h2>
 
-    <p class="uk-article-meta">Written by
-        <a href="#">Super User</a> on 12 April 2012. Posted in
-        <a href="#">Blog</a>
-    </p>
-
-    <pre>
-<code ngNonBindable>
+    <pre><code ngNonBindable>
 &lt;ul>
-    &lt;li *ngFor="let song of songs; trackBy: trackSongByFn">&#123;&#123;song.name}}&lt;/li>
+    &lt;li *ngFor="let song of songs; trackBy: trackSongByFn">{{song.name}}&lt;/li>
 &lt;/ul>
 
 trackSongByFn(index, song) &#123;
     return index; // or song.id
 }
-----------------------------------
+</code></pre>
+</article>
+<!-- END : Angular 4+ Tip -->
+
+<!-- START : Angular 4+ Tip -->
+<article class="uk-article">
+
+    <h2 class="uk-text-lead">How to use jQuery Plugin with Angular 4?</h2>
+
+    <p>Yes you can use jquery with Angular 4</p>
+
+    <p>Steps: </p>
+
+    <p>1) In
+        <code>index.html</code> put below line in tag.</p>
+
+    <p>
+        <code>&lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"&gt;&lt;/script&gt;</code> </p>
+
+    <p>2) In component ts file below you have to declare var like this</p>
+
+    <pre><code ngNonBindable>
+import &#123; Component &#125; from '@angular/core';
+declare var jquery:any;
+declare var $ :any;
+
+@Component(&#123;
+    selector: 'app-root',
+    templateUrl: './app.component.html',
+    styleUrls: ['./app.component.css']
+})
+export class AppComponent &#123;
+    title = 'abgular 4 with jquery';
+    toggleTitle() &#123;
+        $('.title').slideToggle(); //
+    }
+}
+</code></pre>
+
+    <p>And use this code for corresponding html file like this:</p>
+
+    <pre><code ngNonBindable>
+&lt;h1 class="title" style="display:none"&gt;
+    {{title}}
+&lt;/h1&gt;
+&lt;button (click)="toggleTitle()"&gt; clickhere&lt;/button&gt;
+</code></pre>
+
+    <pre>
+<code>// Example 2
+npm install jquery — save
+
+// Second go to the ./angular-cli.json file
+"scripts": [
+    "../node_modules/jquery/dist/jquery.min.js",
+    "../node_modules/bootstrap/dist/js/bootstrap.js"
+]
+
+// import it as follows in app.component.ts file
+import * as $ from ‘jquery’;
+</code>
+</pre>
+
+    <p>This will work for you. Thanks</p>
+</article>
+<!-- END : Angular 4+ Tip -->
+
+<!-- START : Angular 4+ Tip -->
+<article class="uk-article">
+
+    <h2 class="uk-text-lead">Uses of Hidden, ngNonBindable and innerHTML directive</h2>
+
+    <p>
+        <strong>Hidden Directive:</strong>&nbsp; Conditionally add/remove an element form the element. Its same like *ngIf but main
+        <strong>difference between "Hidden"&nbsp; its just hide element not removed from the DOM but in *ngIf it removes form the
+            DOM element.</strong>
+        <br> Syntax:
+        <strong> [hidden]="conditions"</strong>
+    </p>
+    <pre><code>&lt;h2 [hidden]="islogin"&gt;Angular2 Project&lt;/h2&gt;
+&lt;h2&nbsp;[hidden]="!islogin"&gt;Hide&nbsp;Menu&lt;/h2&gt;</code></pre>
+
+    <p>In above example when condition satisfy at that time that hide element from the DOM. </p>
+
+    <strong>ngNonBindable Directive</strong>: When ever we use
+    <strong>this directive it tells Angular not to bind or not to compile</strong>.
+    <br> Syntax: <code ngNonBindable>&lt;h2 ngNonBindable&gt;{{name}}&lt;/h2&gt;</code>
+    <br> Example:
+    <p></p>
+    <pre><code ngNonBindable>&lt;div&gt; Name Person : &lt;span&gt;{{name}}&lt;/span&gt;&lt;/div&gt;</code></pre>
+    <p>when ever above code run it find the name variable in the class and display its binding value of the person. but if we
+        just want to display above sentence as angular syntax then we need to us "ngNonBindable" direactive in span so it
+        will display "&#123;&#123;name}}"</p>
+    <pre><code ngNonBindable>&lt;div&gt; Name Person : &lt;span ngNonBindable&gt;{{name}}&lt;/span&gt;&lt;/div&gt;</code></pre>
+
+    <strong>[innerHTML] Directive:</strong>&nbsp;when we have to display HTML display from the Angular at that time we have use this directive.<br>
+    Normally we uses&nbsp;<code>{{property}}</code>&nbsp;for interpolation of values.&nbsp;&nbsp;That is the way that you would display plain text in your element.<br>
+    Example:<p></p>
+<pre><code>export class HtmlComponent &#123;
+    displayStr: string = '&lt;strong&gt;Good Manners&lt;/strong&gt; Helpful Our Betterment';
+}</code></pre>
+    <pre><code ngNonBindable>&lt;div&gt;{{displayStr}}&lt;/div&gt;</code></pre>
+    <p>It display on the html sting as output</p>
+    <pre><code ngNonBindable>&lt;div [innerHTML]="displayStr"&gt;&lt;/div&gt;</code></pre>
+</article>
+<!-- END : Angular 4+ Tip -->
+
+<!--
+
+==========================================
 Could not find a declaration file for module 'lodash'. 'c:/jr/__UPointNext/NextGen-v3/ui-core-widget/node_modules/lodash/lodash.js' implicitly has an 'any' type.
   Try `npm install @types/lodash` if it exists or add a new declaration (.d.ts) file containing `declare module 'lodash';`
---------------------------------------
+==========================================
 
 On refresh or when you navigate away from the current page, then ngOnDestroy won't be called. The application will just be destroyed by the browser.
 
@@ -40,7 +142,7 @@ See also
 https://developer.mozilla.org/en-US/docs/Web/Events/unload
 How can we detect when user closes browser? (Angular)
 
-------------------------------------
+==========================================
 @HostListener('window:unload', [ '$event' ])
   unloadHandler(event) {
     // ...
@@ -51,7 +153,7 @@ How can we detect when user closes browser? (Angular)
     // ...
   }
 
----------------------------------------
+==========================================
 // Import all
 
 import Rx from "rxjs/Rx";
@@ -101,7 +203,7 @@ Observable
   ::bufferCount(2)
   .subscribe(::console.log);
 
-  ------------------------------------------
+  ==========================================
   https://stackoverflow.com/questions/45898948/angular-4-ngondestroy-in-service-destroy-observable/45898988
   Here's an example:
 
@@ -138,7 +240,7 @@ export class App {
     }, 1000)
   }
 }
----------------------------------------------
+==========================================
 https://stackoverflow.com/questions/39011677/memory-leaks-in-angular2
 
 In the browser, Angular is just JavaScript, so the typical caveats apply.
@@ -176,11 +278,11 @@ From the docs:
 
     we must unsubscribe before Angular destroys the component. Failure to do so could create a memory leak.
 
----------------------------- TUTORIALS -------------------------
+========================================== TUTORIALS ==========================================
 https://www.dwmkerr.com/fixing-memory-leaks-in-angularjs-applications/
 https://auth0.com/blog/four-types-of-leaks-in-your-javascript-code-and-how-to-get-rid-of-them/
 
----------------------------------------------------
+==========================================
 https://github.com/primefaces/primeng/blob/61b8aaa82bbe875b881da9c926c95f2a4ac30bbd/src/app/showcase/components/terminal/terminaldemo.ts
 
 import {Component,OnDestroy} from '@angular/core';
@@ -208,14 +310,14 @@ export class TerminalDemo implements OnDestroy {
         }
     }
 }
-------------------------
+==========================================
 declare global {
     interface Window { MyNamespace: any; }
 }
 
 window.MyNamespace = window.MyNamespace || {};
 
---------------------------------- Index.html
+========================================== Index.html
         function destroyApp() {
             console.log('destroyApp :', window.debugStuff.app);
             window.debugStuff.app.destroy();
@@ -232,7 +334,7 @@ window.MyNamespace = window.MyNamespace || {};
 
         window.addEventListener("beforeunload", destroyApp);
 
-		Main.ts -------------------------
+		Main.ts ==========================================
 		declare global {
   interface Window { debugStuff: any; }
 }
@@ -250,7 +352,7 @@ platformBrowserDynamic().bootstrapModule(AppModule).then((ref) => {
 
 });
 
----------------------------
+==========================================
 @HostListener('window:unload', ['$event'])
     unloadHandler(event) {
         console.log('window:unload Fired...');
@@ -261,7 +363,7 @@ platformBrowserDynamic().bootstrapModule(AppModule).then((ref) => {
         console.log('window:beforeunload Fired...');
     }
 
---------------------------------
+==========================================
 export default {
   resolve: {
     alias: {
@@ -272,7 +374,7 @@ export default {
   // ...
 }
 
-------------------------------
+==========================================
 var $timer = $('#timer'),
     count = 0;
 
@@ -291,7 +393,7 @@ $('button').bind('click', function(e) {
     }
 });
 
-------------------------------
+==========================================
 
 platformBrowserDynamic().bootstrapModule(AppModule, {ngZone: 'noop'}).then(ref => {
   // Ensure Angular destroys itself on hot reloads.
@@ -303,7 +405,7 @@ platformBrowserDynamic().bootstrapModule(AppModule, {ngZone: 'noop'}).then(ref =
   // Otherise, log the boot error
 }).catch(err => console.error(err));
 
-----------------------------------
+==========================================
 //platformBrowserDynamic().bootstrapModule(AppModule);
 const moduleRef = platformBrowserDynamic().bootstrapModule(AppModule).then(ref => {
   console.log('Bootstraping Styleguide..', ref);
@@ -320,7 +422,7 @@ const moduleRef = platformBrowserDynamic().bootstrapModule(AppModule).then(ref =
 console.log('moduleRef :',moduleRef)
 ,
     changeDetection: ChangeDetectionStrategy.OnPush
-----------------------------------
+==========================================
 <ul>
   <li *ngFor="let song of songs; trackBy: trackSongByFn">{{song.name}}</li>
 </ul>
@@ -330,7 +432,4 @@ trackByFn(index, song) {
 }
 
 
-</code>
-</pre>
-
-</article>
+-->
