Added Named Router Outlet Example + Observable Examples

--- a/src/app3-angular-examples/components/angular-tips.component.html
+++ b/src/app3-angular-examples/components/angular-tips.component.html
@@ -1,3 +1,4 @@
+<named-router-component></named-router-component>
 <h1 class="uk-article-title">
     <a class="uk-link-reset" href="">Heading</a>
 </h1>
