--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -56,7 +56,11 @@ pre,
 samp {
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
 }
-
+@font-face{
+    font-family: "faktslabpro-normal",Arial,Helvetica,sans-serif;
+    src: url('../fonts/faktslabpro-normal.woff2') format('woff2');
+    font-weight:normal;font-style:normal
+}
 .visuallyhidden {
     border: 0;
     clip: rect(0 0 0 0);
