--- a/src/app3-angular-examples/form-example/template-driven-form.component.html
+++ b/src/app3-angular-examples/form-example/template-driven-form.component.html
@@ -4,7 +4,7 @@
         <!-- Name field -->
         <div class="form-group">
             <label for="">Name:</label>
-            <input type="text" class="form-control" name="name" [(ngModel)]="user.name" #name="ngModel" required minlength="5" />
+            <input type="text" class="form-control uk-input" name="name" [(ngModel)]="user.name" #name="ngModel" required minlength="5" />
             <small [hidden]="name.valid || (name.pristine && !f.submitted)" class="text-danger">
                 Name is required ( Minimum length 5 characters )
             </small>
@@ -13,7 +13,7 @@
         <!--street-->
         <div class="form-group">
             <label for="">Street:</label>
-            <input type="text" class="form-control" name="street" [(ngModel)]="user.address.street" #street="ngModel" required />
+            <input type="text" class="form-control uk-input" name="street" [(ngModel)]="user.address.street" #street="ngModel" required />
             <small [hidden]="street.valid || (street.pristine && !f.submitted)" class="text-danger">
                 Street is required.
             </small>
@@ -21,7 +21,7 @@
 
         <div class="form-group">
             <label for="">Postalcode:</label>
-            <input type="text" class="form-control" name="postalcode" [(ngModel)]="user.address.postalcode" />
+            <input type="text" class="form-control uk-input" name="postalcode" [(ngModel)]="user.address.postalcode" />
         </div>
 
         <button type="submit">Submit</button>
