Added Connected dropdown example.

--- a/src/app3-angular-examples/form-select-dropdown-example/form-select-dropdown.component.html
+++ b/src/app3-angular-examples/form-select-dropdown-example/form-select-dropdown.component.html
@@ -40,7 +40,7 @@
             <label>Language</label>
 
             <select class="uk-select" name="language" ngModel>
-                <option value="">Please select a language</option>
+                <option value="0">Please select a language</option>
                 <option *ngFor="let lang of langs" [value]="lang">
                     {{lang}}
                 </option>
